fix to make sure hover not showing over lines

--- a/src/style.css
+++ b/src/style.css
@@ -178,5 +178,6 @@ button{
 }
 
 .hover{
-    background-color: red;
+    background-color: var(--colorOne);
+    cursor:pointer;
 }
